# canvas-hyperscribe

./: .coverage.Alexias-MacBook-Pro.local.13372.XmDenBwx  .coverage.Alexias-MacBook-Pro.local.19620.XKfUaYPx  .coverage.Alexias-MacBook-Pro.local.2416.XchLZzFx  .coverage.Alexias-MacBook-Pro.local.93628.XhtASHgx  .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  README.md  REVIEW.md  aggregated_score_variance_analysis.csv  analyze_failed_notes.py  analyze_rubric_authors.py  audio_tools.py  build_cases.sh  case_builder.py  case_list.py  case_runner.py  case_statistics.py  charge-matrix-empty-state-mock.html  check_remaining_cases.py  conftest.py  experiment_note_ids.txt  experiment_notes_mapping.csv  extract_top_records.py  generate_all_notes.sh  generate_missing_notes.sh  generate_rubrics.sh  hyperscribe_test.sh  invalid_output.json  lint.sh  load_synthetic_cases.py  local_env.template.sh  mm_batch_build.sh  mm_batch_test.sh  mypy.ini  output.json  parallel_case_runner.py  preview_output.txt  (+14 more)
.cpa-workflow-artifacts/: claude-history-bf6ff330-95bf-41df-8896-ee7e5c3c0fa3.txt  costs_aggregation.json
.cpa-workflow-artifacts/costs/: 454d2b46-776a-4f93-a64b-cbbcddc7fe86.json  bbc0c6b9-9e0c-44a1-a740-8541a4eb8b17.json
analysis_outputs/: all_cases_analysis.txt  case_15_analysis.txt  case_15_data.csv  cycle_duration_scores.csv
artifacts/: Hyperscribe Free Text Enhancement.rtf  implementation-plan.md  spec.md
commander/: CANVAS_MANIFEST.json  README.md
evaluations/: README.md  as_cases_build.sh  as_cases_build_summarize.sh  auditor_file.py  auditor_postgres.py  auditor_store.py  constants.py  evaluation_cases.db  helper_evaluation.py  test_audio2transcript.py  test_end2end.py  test_instruction2parameters.py  test_parameters2command.py  test_staged_questionnaires.py  test_transcript2instructions.py
hyperscribe/: CANVAS_MANIFEST.json  README.md
hyperscribe_tuning/: CANVAS_MANIFEST.json
integrations/: auditor_file.py  helper_settings.py  schema_differences.json  test_audio2transcript.py  test_instruction2parameters.py  test_parameters2command.py  test_transcript2instructions.py
rubric_eval_sample/: canvas_context.json  chart.json  fatigue_rubric.json  graded_scores.json  grader.py  instructions_json_generator.py  rubric.json  rubric.py  rubric_3.json  rubric_runner.py  test.json
scripts/: SAMPLE_experiment_notes_mapping.csv  SAMPLE_rubric_mapping.csv  analyze_all_cases_scores.py  analyze_case_scores.py  case_runner.py  check_manifest_version.py  count_notes.py  cycle_duration_case_runner.py  experiment_runner.py  investigate_feedback.py  investigate_feedback_output_examples.py  parallel_case_runner.py  parallel_note_generator.py  parallel_rubric_generator.py  random_split_rwc.py  review_feedbacks.py  run_notes_parallel.py  test_env.py  tuning_case_count.py  update_manifest_version.py
tests/: helper.py  test_case_builder.py  test_case_list.py  test_case_runner.py  test_case_statistics.py  test_load_synthetic_cases.py  test_parallel_case_runner.py  test_register_audio_client.py
(+2617 files in other folders)
