[project]
name = "commander-audio-plugin"
version = "0.0.5"
description = "add commands based on vocal instructions"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "canvas>=0.34.0",
    "mypy>=1.15.0",
    "ffmpeg-python>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["commander"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.12.4",
    "types-requests>=2.32.0.20250602",
]

[tool.ruff]
select = ["F401", "W292"]  # Unused imports + missing final newline
ignore = []
fix = true

# [tool.ruff.format] section disabled to prevent formatting changes
