[project]
name = "hyperscribe-plugin"
version = "0.0.6"
description = "add commands based on vocal instructions"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    # 0.155.0 ships ENTER_IN_ERROR_CUSTOM_COMMAND_COMMAND in the proto enum,
    # required by the KOALA-5485 amend path for CustomCommand-routed sections
    # (_ros, _history_review, _chart_review, physical_exam, lab_results).
    "canvas>=0.155.0",
    "canvas[test-utils]>=0.155.0",
    "mypy>=1.15.0",
    "ffmpeg-python>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["commander"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.12.4",
    "types-requests>=2.32.0.20250602",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F401", "W292", "W291", "Q000", "E111", "E117", "E501"]  # Unused imports, trailing newlines, trailing whitespace, quotes, indentation, line length
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
# Only apply specific formatting rules
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
